k8s/gradio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gradio-service
  namespace: sentiment-app
spec:
  selector:
    app: gradio
  ports:
    - protocol: TCP
      port: 7860
      targetPort: 7860
